@@ -31,6 +31,8 @@ namespace ori
 			void set_win_title();
 			void add_line();
 			void rem_line(size_t v, size_t c, size_t l);
+			void add_point_to_line(size_t v, size_t c, size_t l, int x, int y);
+			void rem_point_from_line(size_t v, size_t c, size_t l, int x, int y);
 			virtual void about() override;
 			Glib::RefPtr<Gtk::TreeStore> fill_tree(crn::Progress *prog);
 			void tree_selection_changed(bool focus);
@@ -77,6 +79,8 @@ namespace ori
 			enum class ViewDepth { None, Page, Column, Line };
 			ViewDepth view_depth;
 			sigc::connection line_rem_connection;
+			sigc::connection line_add_point_connection;
+			sigc::connection line_rem_point_connection;
 			std::unique_ptr<Validation> validation_win;
 
 			std::unique_ptr<Project> project;
